Subo nabe central casi finalizada.

--- a/GridTemplate.html
+++ b/GridTemplate.html
@@ -47,12 +47,17 @@
         <script type="text/javascript" src="Objetos/Turbina.js"></script>
         <script type="text/javascript" src="Curvas/Punto.js"></script>
         <script type="text/javascript" src="Curvas/Bazier.js"></script>
+        <script type="text/javascript" src="Curvas/CurvasExternasCentroEstacionEspacial.js"></script>
+        <script type="text/javascript" src="Curvas/CurvasInternasCentroEstacionEspacial.js"></script>
         <script type="text/javascript" src="Objetos/Grilla.js"></script>
         <script type="text/javascript" src="Objetos/Esfera.js"></script>
         <script type="text/javascript" src="Objetos/Cilindro.js"></script>
         <script type="text/javascript" src="Objetos/EstacionEspacial.js"></script>
         <script type="text/javascript" src="Objetos/TubosEstacionEspacial.js"></script>
         <script type="text/javascript" src="Objetos/PanelSolar.js"></script>
+        <script type="text/javascript" src="Objetos/CentroBaseEspacialInterno.js"></script>
+        <script type="text/javascript" src="Objetos/CentroBaseEspacialExterno.js"></script>
+        <script type="text/javascript" src="Objetos/TapaCentroBaseEspacial.js"></script>
         
         <!--
         Vertex shader
