--- a/GridTemplate.html
+++ b/GridTemplate.html
@@ -49,6 +49,7 @@
         <script type="text/javascript" src="Curvas/Bazier.js"></script>
         <script type="text/javascript" src="Curvas/CurvasExternasCentroEstacionEspacial.js"></script>
         <script type="text/javascript" src="Curvas/CurvasInternasCentroEstacionEspacial.js"></script>
+        <script type="text/javascript" src="Curvas/CurvasCorazonEstacionEspacial.js"></script>
         <script type="text/javascript" src="Objetos/Grilla.js"></script>
         <script type="text/javascript" src="Objetos/Esfera.js"></script>
         <script type="text/javascript" src="Objetos/Cilindro.js"></script>
@@ -58,6 +59,7 @@
         <script type="text/javascript" src="Objetos/CentroBaseEspacialInterno.js"></script>
         <script type="text/javascript" src="Objetos/CentroBaseEspacialExterno.js"></script>
         <script type="text/javascript" src="Objetos/TapaCentroBaseEspacial.js"></script>
+        <script type="text/javascript" src="Objetos/CorazonNaveEspacial.js"></script>
         
         <!--
         Vertex shader
